# regrets

./: README.md  main.py  parser.py  pyproject.toml  requirements.txt  test_brzozowski.py  test_main.py  test_parser.py  test_z3_cli.py  test_z3_parser.py
.github/workflows/: pages.yml
engines/brzozowski/: __init__.py  cli.py  derive_session.py  dfa.py  generator.py  parser.py  pretty.py  re_ast.py  session.py
engines/z3/: __init__.py  cli.py  solver.py
web/: converter.js  index.html  negate.html  negate.js  playground.html  playground.js  regrets.js  sessionui.js  style.css
